--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ verify_ssl = true
 
 [packages]
 django = "*"
+python-decouple = "*"
+pathlib = "*"
+dj-database-url = "*"
+unipath = "*"
 
 [requires]
 python_version = "3.7"
