--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ python-decouple = "*"
 pathlib = "*"
 dj-database-url = "*"
 unipath = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
