add cors and limit PersonalNotes to owners

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pathlib = "*"
 dj-database-url = "*"
 unipath = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
