--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ dj-database-url = "*"
 unipath = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+graphene-django = "*"
 
 [requires]
 python_version = "3.7"
